<resources>
    <string name="app_name">BooksAndroidApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity</string>
    <string name="george_orwell">George Orwell</string>
    <string name="basket">Basket</string>
    <string name="delivery_for_free_until_the_end_of_the_month">Delivery for FREE until the end of the month</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="start_ordering">Start ordering</string>
    <string name="press_the_button_below_to_create_an_order">Press the button below to create an order</string>
    <string name="no_book_yet">No book yet</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="products_2">Products: 2</string>
    <string name="my_credit_card">My credit card</string>
    <string name="_1234">**** **** **** 1234</string>
    <string name="rosina_doe">Rosina Doe</string>
    <string name="_04_26">04/26</string>
    <string name="total_valur">Total</string>
    <string name="_957">957 $</string>
    <string name="pay_now">Pay now</string>
    <string name="checkout_fragment">Checkout</string>
    <string name="shipping_information">Shipping information</string>
    <string name="change">change</string>
    <string name="rosina_doe_detail">Rosina Doe</string>
    <string name="_43_oxford_road_m13_4gr_manchester_uk">43 Oxford Road M13 4GR Manchester, UK</string>
    <string name="_234_9011039271">+234 9011039271</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_1">**** **** **** 1234</string>
    <string name="_9876">**** **** **** 9876</string>
    <string name="_4569">**** **** **** 4569</string>
    <string name="confirm_and_pay_checkout">Confirm and pay</string>
    <string name="_108">108</string>
    <string name="eng">Eng</string>
    <string name="rating">Rating</string>
    <string name="pages">Pages</string>
    <string name="langugae">Langugae</string>
    <string name="description">Description</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="all">All</string>
    <string name="politics">Politics</string>
    <string name="fear">Fear</string>
    <string name="fantasy">Fantasy</string>
    <string name="westerns">Westerns</string>
    <string name="romance">Romance</string>
    <string name="action">Action</string>
    <string name="best_selling">Best Selling</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="trending_now">Trending Now</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="my_profile">My profile</string>
    <string name="address_43_road_m13_4gr_manchester_uk">Address: 43 Road M13 4GR Manchester, UK</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shopping_address">Shopping address</string>
    <string name="order_history">Order history</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="re_password">Re-Password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="let_s_read_together">Let\'s read together</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="start_with_n_a_book">Start with\n a book</string>
    <string name="get_started">Get Started</string>
</resources>